5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1662_2972.log
== TEST (2019-04-15 14:11:51) 
-- CODE:
so = float(input("posicao inicial: "))
v = float(input("velociade: "))
t = float(input("deslocamento: "))

s = so + v*t
print(s)
if (s >=1000):
	print("Sim")
else:(s<1000)
	print("Nao")
-- ERROR:
File "XXXX", line 10
    print("Nao")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:12:09) 
-- CODE:
so = float(input("posicao inicial: "))
v = float(input("velociade: "))
t = float(input("deslocamento: "))

s = so + v*t
print(s)
-- OUTPUT:
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:13:52) 
-- CODE:
so = float(input("posicao inicial: "))
v = float(input("velociade: "))
t = float(input("deslocamento: "))

s = so + v*t
if (s >= 100):
	print("Sim")
else:
	print("Nao")
print(s)

-- OUTPUT:
Sim
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:14:36) 
-- CODE:
so = float(input("posicao inicial: "))
v = float(input("velociade: "))
t = float(input("deslocamento: "))

s = so + v*t
if (s >= 100):
	print("Sim")
else:
	(s < 1000)
	print("Nao")
print(s)

-- OUTPUT:
Sim
3002.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:12) 
-- CODE:
so = float(input("posicao inicial: "))
v = float(input("velociade: "))
t = float(input("deslocamento: "))

s = so + v*t
print(s)
if (s >= 100):
	print("Sim")
else:
	(s < 1000)
	print("Nao")

-- OUTPUT:
3002.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:28) 
-- CODE:
so = float(input("posicao inicial: "))
v = float(input("velociade: "))
t = float(input("deslocamento: "))

s = so + v*t
print(s)
if (s >= 1000):
	print("Sim")
else:
	(s < 1000)
	print("Nao")

-- OUTPUT:
3002.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:15:38) 
-- CODE:
so = float(input("posicao inicial: "))
v = float(input("velociade: "))
t = float(input("deslocamento: "))

s = so + v*t
print(s)
if (s >= 1000):
	print("Sim")
else:
	(s < 1000)
	print("Nao")

-- EXECUTION TIME:
0.146291
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002.0
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252.0
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755.0
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:16:33) 
-- CODE:
so = int(input("posicao inicial: "))
v = int(input("velociade: "))
t = int(input("deslocamento: "))

s = so + v*t
print(s)
if (s >= 1000):
	print("Sim")
else:
	(s < 1000)
	print("Nao")

-- EXECUTION TIME:
0.177183
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
